# QuestPDF.Native.Skia.Build

./: README.md
.github/workflows/: build.yaml  build_questpdf_skia.yml  main.yaml
managed/: NativeSkia.slnx
managed/NativeSkia/: NativeSkia.csproj  SkBitmap.cs  SkCanvas.cs  SkData.cs  SkDocument.cs  SkImage.cs  SkNativeDependencyCompatibilityChecker.cs  SkNativeDependencyProvider.cs  SkPaint.cs  SkPdfDocument.cs  SkPicture.cs  SkPictureRecorder.cs  SkResourceProvider.cs  SkSvgCanvas.cs  SkSvgImage.cs  SkWriteStream.cs  SkXpsDocument.cs
managed/NativeSkia.Tests/: CanvasTests.cs  DataTests.cs  ImageTests.cs  NativeSkia.Tests.csproj  ParagraphTests.cs  PdfDocumentTests.cs  PictureRecorderTests.cs  SvgCanvasTests.cs  SvgImageTests.cs  TestFixture.cs  TestHelpers.cs
managed/NativeSkia/Text/: SkFontCollection.cs  SkFontManager.cs  SkParagraph.cs  SkParagraphBuilder.cs  SkTextStyle.cs  SkTypeface.cs  SkTypefaceProvider.cs  SkUnicode.cs
native/: CMakeLists.txt
native/src/: bitmap.cpp  canvas.cpp  compatibility.cpp  data.cpp  document.cpp  export.h  image.cpp  paint.cpp  pdf.cpp  pdfTag.cpp  picture.cpp  pictureRecorder.cpp  resourceProvider.cpp  stream.cpp  svg.cpp  svgCanvas.cpp  xps.cpp
native/src/text/: fontCollection.cpp  fontManager.cpp  paragraph.cpp  paragraphBuilder.cpp  textStyle.cpp  typeface.cpp  typefaceFontProvider.cpp  unicode.cpp
